z-index fix

--- a/src/js/notice.css
+++ b/src/js/notice.css
@@ -3,6 +3,7 @@
 	top: 10px;
 	right: 0px;
 	width: 300px;
+    z-index: 999999;
 }
 
 .aw-widget .noticecont .notice {
